--- a/src/styling/themes.scss
+++ b/src/styling/themes.scss
@@ -25,7 +25,7 @@ $themes: (
     highlight: #89bd9e,
     highlight-dark: #5f846e,
     contrast: #DB4C40,
-    background: #191919,
+    background:#262626,
     card-bg:black,
   ),
   mono:
@@ -49,7 +49,7 @@ $themes: (
     primary: #b2b2b2,
     primary-dark: #a0a0a0,
     accent-light: #5d5d5d,
-    accent: #4c4c4c,
+    accent: #6A6C6E,
     accent-dark: #444444,
     highlight-light: #252525,
     highlight: #191919,
